--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
 </head>
 
 <body>
@@ -23,19 +22,28 @@
                 <div class="brand-name me-5 fs-5">Esquire Online Store</div>
             </div>
 
-
             <div class="icons d-flex gap-3">
                 <div class="search"><img src="search_24dp_FILL0_wght400_GRAD0_opsz24.svg"></div>
                 <div class="user"><img src="person_24dp_FILL0_wght400_GRAD0_opsz24.svg"></div>
                 <div class="cart"><img src="shopping_cart_24dp_FILL0_wght400_GRAD0_opsz24.svg"></div>
             </div>
-
-        </div>
         </div>
     </nav>
+    <br>
+    <div class="hero">
+        <div class="container-fluid hero-sec">
+            <img src="hero.jpg" alt="">
+        </div>
 
+        <div class="collect">
+            <img src="1.png" alt="">
+        </div>
+    </div>
+    <!-- Cards -->
 
-
+    <div id="card" class="row pt-5 mx-1 ">
+      
+    </div>
     <script src="app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
         integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
